--- a/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/Recharge/RechargeDetailsViewController.xib
+++ b/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/Recharge/RechargeDetailsViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RechargeDetailsViewController">
             <connections>
                 <outlet property="balanceLabel" destination="ln2-UG-wKY" id="vP8-LL-F2M"/>
+                <outlet property="layoutTop" destination="ptO-Dd-3x0" id="e2Z-LB-DF8"/>
                 <outlet property="lshNumLabel" destination="sir-gF-dut" id="uI7-sj-mUx"/>
                 <outlet property="rechargeNumLabel" destination="GoI-lr-u6g" id="vig-v6-LOr"/>
                 <outlet property="rechargeType" destination="ZGz-fo-gpi" id="gMJ-yK-cte"/>
