--- a/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/UserInfo/UserInfoViewController.xib
+++ b/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/UserInfo/UserInfoViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="cacheNumLabel" destination="Od7-1J-lmD" id="WCq-Ft-ivx"/>
                 <outlet property="headImgView" destination="3aE-aI-cfe" id="szo-By-BbP"/>
+                <outlet property="layoutTop" destination="eU0-lW-Xik" id="150-M8-Ves"/>
                 <outlet property="loginOutBtn" destination="5mM-5Z-ICg" id="Crk-6J-0WX"/>
                 <outlet property="nickNameLabel" destination="6aN-NL-1du" id="sma-rA-VJp"/>
                 <outlet property="phoneLabel" destination="lft-e7-D7L" id="fGd-mt-oGn"/>
@@ -365,6 +366,6 @@
     </objects>
     <resources>
         <image name="Tab_4-2" width="45" height="45"/>
-        <image name="arrow_right" width="18" height="32"/>
+        <image name="arrow_right" width="9" height="16"/>
     </resources>
 </document>
